Fixing some error on SilverpeasSettings.xml for Linux Fixing support #688 : PermSize is defined in JAVA_OPTS
git-svn-id: https://www.silverpeas.org/svn/silverpeas/services/installation/trunk@1807 a8e77078-a1c7-4fa5-b8fc-53c5178a176c