@@ -12,7 +12,8 @@ del silverpeas-destinations-service.xml.bak*
 cd "%JBOSS_HOME%/bin"
 
 rem Add Silverpeas Properties root repository to path
-SET JBOSS_CLASSPATH=%SILVERPEAS_HOME%/properties
+rem SET JBOSS_CLASSPATH=%SILVERPEAS_HOME%/properties
+SET JAVA_OPTS=-server -Xms512m -Xmx512m -XX:MaxPermSize=128m -Dorg.jboss.logging.Log4jService.catchSystemOut=false 
 
 call run.bat
 
